Text readability fix

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 #subtext {
     font-size: 14px;
-    color: var(--ctp-frappe-overlay2);
+    color: var(--ctp-frappe-surface0);
 }
 
 #biggy {
